# Attendance-Management-System

./: .gitignore  README.md
Backend/: .gitignore  README.md  pyproject.toml
Backend/app/: app.py
Backend/app/api/: auth.py
Backend/app/core/: config.py
Backend/app/db/postgresql/: db.py  repository.py
Backend/app/models/: models.py
Backend/app/security/: authentication.py
ams/: app.json  package-lock.json  tailwind.config.js
student-interface/: README.md  app.json  package.json  tailwind.config.js
student-interface/app/: global.css  index.tsx
teacher-interface/: README.md  index.html  package-lock.json  package.json  tsconfig.json
teacher-interface/src/: App.tsx  index.css
teacher-interface/src/components/custom/: Navigation.tsx
teacher-interface/src/pages/: Home.tsx  Login.tsx
